2002-12-09  Markus Rost  <rost@math.ohio-state.edu>

	* mwheel.el (mouse-wheel-scroll-amount): Revert previous change -
	customize type 'float is now defined.

2002-12-09  Dave Love  <fx@gnu.org>

	* international/ucs-tables.el: Fix properly.

2002-12-09  Andreas Schwab  <schwab@suse.de>

	* international/ucs-tables.el: Fix last change.

2002-12-09  Kenichi Handa  <handa@m17n.org>

	* international/titdic-cnv.el (titdic-convert): Process the
	header part in multibyte mode.

2002-12-08  Dave Love  <fx@gnu.org>

	* international/code-pages.el (mule-diag): Move where it's
	required.

	* international/ucs-tables.el: Add latin-jisx0201 characters.  Fix
	translation-table-for-input for lao, thai, tibetan.

2002-12-08  Andreas Schwab  <schwab@suse.de>

	* files.el (insert-directory): Insert free space only when
	listing a full directory.

2002-12-08  Nick Roberts  <nick@nick.uklinux.net>

	* gdb-ui.el : Remove inappropriate key-bindings.
	(gdb-info-breakpoints-custom, gdb-goto-bp-this-line):
	Parse correctly when breakpoint has no line number.
	(def-gdb-auto-update-handler, gdb-info-locals-handler),
	(gdb-display-end): Avoid using insert-buffer.
	(gdb-frames-select-by-mouse): Rename gdb-frames-mouse-select.

2002-12-07  Richard M. Stallman  <rms@gnu.org>

	* progmodes/compile.el (compilation-enter-directory-regexp-alist)
	(compilation-leave-directory-regexp-alist): Match byte compiler output.

	* emacs-lisp/cl-macs.el: Add local variable list
	to turn off cl-function warnings.

	* emacs-lisp/bytecomp.el (byte-compile-eval): Handle (t . SYMBOL)
	elements in load-history.
	(byte-compile-cl-warn): No cl warnings for cl-defsubst-expand
	and cl-struct-setf-expander.

	* emacs-lisp/autoload.el (autoload-print-form-outbuf):
	New variable.
	(autoload-print-form): Use autoload-print-form-outbuf.
	(generate-file-autoloads): Bind autoload-print-form-outbuf.

	* calendar/calendar.el (calendar-day-name): Move defn down.

	* speedbar.el (speedbar-directory-buttons-follow):